@@ -34,6 +34,7 @@ v.0.5dev (ongoing development)
  + New common 5x8 font for t6963, sed1520, mdm166a and i2500vfd
  * t6963: Size has now to be configured in pixels instead of characters
  + Build system: --enable-extra-charmaps option adds language specific charmaps
+ * imonlcd: Fix spinning of disc icon (E. Pooch)
 
 v0.5.4
  * Update driver includes and LDFLAGS (fixed glk and bayrad binding error)
